# seld

./: .gitignore  main.py  pyproject.toml
configs/: base.toml  base_sample.toml  streaming_test.toml  train_dhoom.toml  train_fixed_chunk_4.toml  train_fixed_chunk_49.toml  train_hoom.toml  train_hoom_ccan.toml  train_hoom_deep_buan.toml  train_hoom_deep_ccan.toml  train_hoom_wide.toml  train_resnet_conformer_dhoom.toml  train_resnet_conformer_dhoom_dynamic_chunk.toml  train_resnet_conformer_dhoom_fixed_chunk.toml  train_u2_dynamic_chunk.toml
configs/dynamic_test/: chunk_24.toml  chunk_4.toml  chunk_49.toml  chunk_4_fast.toml  chunk_9.toml  full_context.toml  full_context_offline_2s.toml  full_context_offline_2s_overlap.toml  full_context_offline_5s.toml  full_context_offline_5s_overlap.toml  full_context_offline_7s.toml  full_context_offline_7s_overlap.toml  full_context_overlap_fusion.toml  hoom_ccan_offline.toml  hoom_deep_buan_offline.toml  hoom_deep_ccan_offline.toml  hoom_offline.toml  hoom_wide_offline.toml  resnet_conformer_dhoom_chunk_4.toml  resnet_conformer_dhoom_dynamic_chunk_offline.toml  resnet_conformer_dhoom_dynamic_chunk_streaming.toml  resnet_conformer_dhoom_dynamic_chunk_streaming_chunk24.toml  resnet_conformer_dhoom_dynamic_chunk_streaming_chunk4.toml  resnet_conformer_dhoom_dynamic_chunk_streaming_chunk9.toml  resnet_conformer_dhoom_fixed_chunk_offline.toml  resnet_conformer_dhoom_fixed_chunk_streaming.toml
docs/: P0_P1_modification_report.md  dhoom_architecture.md  dual_path_research.md  gen_dhoom_architecture.py  gen_dhoom_fusion.py  gen_fig1.py  gen_fig1_annotated.py  gen_offline_comparison.py  gen_report_chart.py  gen_u2_architecture.py  implementation_analysis.md  plot_architecture.py  resnet_conformer_dhoom_implementation.md  weekly_report_20260223.md
scripts/: convert_metrics_csv_to_toml.py  plot_comparison.py  plot_hoom_compare.py  plot_u2_dynamic_chunk.py  serve_pdf.py  split_metrics.py  test_dhoom_all.sh  test_dhoom_streaming.sh  test_full_context_offline.sh  test_hoom_all.sh  test_u2_chunk_all.sh  train_all.sh  train_hoom_all.sh
src/config/: config_manager.py  loader.py  schema.py
src/seld/lr_scheduler/: tri_stage_lr_scheduler.py
src/seld/models/: cache_resnet_conformer.py
src/seld/scripts/: norm_lmdb.py
src/seld/test/: test_cache_model_streaming.py
src/seld/train/: train_dynamic_chunk.py
src/seld/utils/: process.py
src/seld_v2/: README.md  __init__.py  train_v2.py
src/seld_v2/data/: dataset.py  process.py
src/seld_v2/losses/: __init__.py  distillation_loss.py  dual_head_loss.py  sed_doa_loss.py
src/seld_v2/metrics/: __init__.py  result_collector.py
src/seld_v2/models/: __init__.py  common.py  resnet_conformer.py  resnet_conformer_dhoom.py  resnet_dhoom.py  resnet_hoom.py
src/seld_v2/test/: test_cache_model_streaming.py  test_dataset.py  test_dhoom.py  test_result_collector.py
(+28 files in other folders)
