[project]
name = "seld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "pydantic>=2.12.5",
    "tomli>=2.4.0",
    "einops>=0.8.2",
    "lmdb>=1.7.5",
    "joblib>=1.5.3",
    "protobuf>=6.33.5",
    "tqdm>=4.67.2",
    "scipy>=1.15.3",
    "matplotlib>=3.10.8",
    "librosa>=0.11.0",
    "scikit-learn>=1.7.2",
]
# CUDA 11.8
# pip install torch==2.6.0 torchvision==0.21.0 torchaudio==2.6.0 --index-url https://download.pytorch.org/whl/cu118

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name=["seld","config"]
module-root = "src"


[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
{index="pytorch-cu118"},
]
torchvision = [
{index="pytorch-cu118"},
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.76.0",
    "protobuf>=6.33.5",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
# feature 提取,参数文件:parameter
feature_extraction = "uv run src/seld/utils/feature/feature_extraction.py"
# feature 从npy格式到lmdb格式,参数文件:convert_lmdb本身
feature_to_lmdb = "uv run src/seld/utils/lmdb_tools/convert_lmdb.py"